--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "LordUserbot",
+  "name": "HanifUserbot",
   "version": "5.1.1",
   "description": "WhatsApp bot",
   "main": "main.js",
