--- a/settings.json
+++ b/settings.json
@@ -10,7 +10,7 @@
 	"ownerNumber": "6285731621782",
 	"ownername": "Hanif",
 	"botname":"HanifUserbot",
-	"thumbnail":"LordUserbot_Thumb_1.jpg",
-	"fakethumb":"LordUserbot_Thumb_1.jpg",
+	"thumbnail":"HanifUserbot_Thumb_1.jpg",
+	"fakethumb":"HanifUserbot_Thumb_1.jpg",
 	"url_gif":"https://telegra.ph/file/c864fc477fa22e0d4bfc3.mp4"
 }
